--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <h1>Hello I am Claudia</h1>
-<img src= "/is216/week1/mypic/mypic.jpg">
+<body>
+  <img src= "/is216/week1/mypic/mypic.jpg">
+</body>
+
