--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1>Hello I am Claudia</h1>
 <body>
-  <img src= "is216/week1/mypic/mypic.jpg">
+  <img src= "/is216/week1/mypic/mypic.jpg">
+  All the best for IS216!
 </body>
 
