--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h1>Hello I am Claudia</h1>
 <body>
-  <img src= "/is216/week1/mypic/mypic.jpg">
-  All the best for IS216!
+  <img src= "/is216/week1/mypic/mypic.jpg"><br>
+  <p>I love travelling! All the best for IS216 :)</p>
+  
 </body>
 
