--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Hello I am Claudia</h1>
 <body>
-  <img src= "mypic.jpg">
+  <img src= "/mypic.jpg">
   <p>I love travelling! All the best for IS216 :)</p>
   
 </body>
