--- a/mypage.html
+++ b/mypage.html
@@ -1,7 +1,10 @@
+<html>
+  
 <h1>Hello I am Claudia</h1>
 <body>
   <img src="/is216/week1/mypic/mypic.jpg">
   <p>I love travelling! All the best for IS216 :)</p>
   
 </body>
+</html>
 
