--- a/mypage.html
+++ b/mypage.html
@@ -1,10 +1,8 @@
-<html>
-  
+<html>  
 <h1>Hello I am Claudia</h1>
 <body>
-  <img src="/is216/week1/mypic/mypic.jpg">
+  <img src="/is216/week1/mypic/mypic.jpg" alt="A picture of Claudia">
   <p>I love travelling! All the best for IS216 :)</p>
-  
 </body>
 </html>
 
