--- a/mypage.html
+++ b/mypage.html
@@ -1,5 +1,5 @@
 <html>  
-<h1>Hello I am Claudia</h1>
+<head><h1>Hello I am Claudia</h1></head>
 <body>
   <img src="/is216/week1/mypic/mypic.jpg" alt="A picture of me">
   <p>I love travelling! All the best for IS216 :)</p>
