--- a/mypage.html
+++ b/mypage.html
@@ -1,8 +1,8 @@
 <html>  
 <head><h1>Hello I am Claudia</h1></head>
 <body>
-  <img/ src="/is216/week1/mypic/mypic.jpg">
-  <p>I love travelling! All the best for IS216 :)</p>
+  <img src="/is216/week1/mypic/mypic.jpg">
+  <p>I love travelling! All the best for IS216 ;)</p>
 </body>
 </html>
 
