--- a/mypage.html
+++ b/mypage.html
@@ -1,7 +1,7 @@
 <html>  
 <head><h1>Hello I am Claudia</h1></head>
 <body>
-  <img src="mypic.jpg">
+  <img src="/mypic.jpg">
 
   <p>I love travelling! All the best for IS216 yay ;)</p>
 </body>
