--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <img src="/mypic.jpg">
 
-  <p>I love travelling! All the best for IS216 yay ;)</p>
+  <p>I love travelling! Excited for IS216 yay ;)</p>
 </body>
 </html>
 
