--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>  
 <head><h1>Hello I am Claudia</h1></head>
 <body>
-  <img src="/mypic.jpg">
+  <img src="images/mypic.jpg">
 
   <p>I love travelling! Excited for IS216 yay ;)</p>
 </body>
