--- a/week1/justin/justin.html
+++ b/week1/justin/justin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justin Bieber Fan Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="justin.css">
 </head>
 <body>
     <header>
@@ -36,9 +36,9 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="https://example.com/justin1.jpg" alt="Justin Bieber 1">
-            <img src="https://example.com/justin2.jpg" alt="Justin Bieber 2">
-            <img src="https://example.com/justin3.jpg" alt="Justin Bieber 3">
+            <img src="/images/justinbieber/justin1.jpg" alt="Justin Bieber 1">
+            <img src="/images/justinbieber/justin2.jpg" alt="Justin Bieber 2">
+            <img src="/images/justinbieber/justin3.jpg" alt="Justin Bieber 3">
         </div>
     </section>
 
