--- a/week1/justin/justin.html
+++ b/week1/justin/justin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justin Fanpage</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="justin.css">
 </head>
 <body>
     <header>
@@ -39,9 +39,9 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="justin1.jpg" alt="Justin performing">
-            <img src="justin2.jpg" alt="Justin with fans">
-            <img src="justin3.jpg" alt="Justin on stage">
+            <img src="/images/justinbieber/justin1.jpg" alt="Justin performing">
+            <img src="/images/justinbieber/justin2.jpg" alt="Justin with fans">
+            <img src="/images/justinbieber/justin3.jpg" alt="Justin on stage">
         </div>
     </section>
 
