--- a/week1/justin/justin.html
+++ b/week1/justin/justin.html
@@ -42,6 +42,9 @@
             <img src="/images/justinbieber/justin1.jpg" alt="Justin performing" class="interactive">
             <img src="/images/justinbieber/justin2.jpg" alt="Justin with fans" class="interactive">
             <img src="/images/justinbieber/justin3.jpg" alt="Justin on stage" class="interactive">
+            <img src="/images/justinbieber/justin4.jpg" alt="Justin performing" class="interactive">
+            <img src="/images/justinbieber/justin5.jpg" alt="Justin with fans" class="interactive">
+            <img src="/images/justinbieber/justin6.jpg" alt="Justin on stage" class="interactive">
         </div>
     </section>
 
