--- a/week1/justin/justin.html
+++ b/week1/justin/justin.html
@@ -14,18 +14,17 @@
                 <li><a href="#about" class="interactive">About</a></li>
                 <li><a href="#news" class="interactive">News</a></li>
                 <li><a href="#gallery" class="interactive">Gallery</a></li>
-                <li><a href="#game" class="interactive">Play Game</a></li>
                 <li><a href="#contact" class="interactive">Contact</a></li>
             </ul>
         </nav>
     </header>
     
-    <section id="about" class="animate-on-scroll">
+    <section id="about" class="animated-section">
         <h2>About Justin</h2>
         <p>Justin Bieber is a Canadian singer and songwriter who gained fame with his debut single "Baby". Known for his catchy pop hits and impressive vocal range, Justin has become one of the most influential artists of his generation.</p>
     </section>
 
-    <section id="news" class="animate-on-scroll">
+    <section id="news" class="animated-section">
         <h2>Latest News</h2>
         <article>
             <h3>New Album Release</h3>
@@ -37,7 +36,7 @@
         </article>
     </section>
 
-    <section id="gallery" class="animate-on-scroll">
+    <section id="gallery" class="animated-section">
         <h2>Gallery</h2>
         <div class="gallery">
             <img src="/images/justinbieber/justin1.jpg" alt="Justin performing" class="interactive">
@@ -46,15 +45,7 @@
         </div>
     </section>
 
-    <section id="game">
-        <h2>Catch the Bieber Game</h2>
-        <div id="gameArea">
-            <img src="/images/justinbieber/justin4.jpg" alt="Catch me!" id="gameImage">
-            <p id="score">Score: 0</p>
-        </div>
-    </section>
-
-    <section id="contact" class="animate-on-scroll">
+    <section id="contact" class="animated-section">
         <h2>Contact</h2>
         <form action="submit_form.php" method="post">
             <label for="name">Name:</label>
