--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>  
-<head><h1>Hello I am Claudia</h1></head>
+<head>
+  <link rel="stylesheet" href="index.css">
+  <h1>Hello I am Claudia</h1>
+</head>
+
+
 <body>
   <img src="/images/mypic.jpg">
-  <p>I love travelling! Excited for IS216 yay ;)</p>
+  <p>I love travelling and I am excited for <span style="color: red">IS216</span> yay ;)</p>
 </body>
 </html>
 
