--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
 
 <body>
   <img src="/images/mypic.jpg">
-  <p>I love travelling and I am excited for <span style="color: red">IS216</span> yay ;)</p>
+
+  <div>
+    <p>I love travelling and I am excited for <span style="color: red">IS216</span> yay ;) My favourite travel destination is South Korea! </p>
+  </div>
+  
+  <h2> My favourite travel destination</h2>
+  <div class="video-container">
+    <iframe 
+    src="https://www.youtube.com/embed/CcCjvSZQ-Xc?autoplay=1&mute=1&controls=0" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen>
+    </iframe>
+  </div>
+  
 </body>
 </html>
 
