--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <img src="/images/mypic.jpg">
 
   <div>
-    <p>I love travelling and I am excited for <span style="color: red; font-weight: bold;">IS216</span> yay ;) My favourite travel destination is South Korea! </p>
+    <p>Welcome to my page :> I love travelling and I am excited for <span style="color: red; font-weight: bold;">IS216</span> yay ;) My favourite travel destination is South Korea! </p>
   </div>
   
   <h2> My favourite travel destination</h2>
