--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>  
 <head>
+  <title>Claudia's Github Page</title>
   <link rel="stylesheet" href="index.css">
   <h1>Hello I am Claudia</h1>
 </head>
