--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 
 
 <body>
+  <div>
+    <intr>Welcome to my page :></intr>
+  </div>
+
   <img src="/images/mypic.jpg">
 
+
   <div>
-    <p>Welcome to my page :> I love travelling and I am excited for <span style="color: red; font-weight: bold;">IS216</span> yay ;) My favourite travel destination is South Korea! </p>
+    <p>I love travelling and I am excited for <span style="color: red; font-weight: bold;">IS216</span> yay ;) My favourite travel destination is South Korea! </p>
   </div>
   
   <h2> My favourite travel destination</h2>
