--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
   <title>Claudia's Github Page</title>
   <link rel="stylesheet" href="index.css">
-  <h1>Hello I am Claudia</h1>
+  <h1 style="text-align: center;">Hello I am Claudia</h1>
 </head>
 
 
 <body>
-  <div>
-    <intr>Welcome to my page :></intr>
+  <div class="intr">
+    Welcome to my page :>
   </div>
   <br>
 
