--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
-<html>  
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Claudia's Github Page</title>
   <link rel="stylesheet" href="index.css">
-  <h1 style="text-align: center;">Hello I am Claudia</h1>
+
+  <h1 class= "pink" style="text-align: center;">Hello I am Claudia</h1>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 
 <body>
+  
+
+
+
   <div class="intr">
     Welcome to my page :>
   </div>
@@ -21,7 +32,7 @@
 
   <br>
   
-  <h2> My favourite travel destination</h2>
+  <h2 class="purple"> My favourite travel destination</h2>
   <div class="video-container">
     <iframe 
     src="https://www.youtube.com/embed/CcCjvSZQ-Xc?autoplay=1&mute=1&controls=0" 
@@ -34,5 +45,6 @@
   </div>
   
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
 
