--- a/index.html
+++ b/index.html
@@ -7,17 +7,38 @@
   <title>Claudia's Github Page</title>
   <link rel="stylesheet" href="index.css">
 
-  <h1 class= "pink" style="text-align: center;">Hello I am Claudia</h1>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 
 <body>
-  
+  <div class="row">
+    <nav class="navbar navbar-expand-lg" id="home" style="background-color: #e3f2fd;"">
+      <div class="container-fluid">
+        <a class="navbar-brand mx-3" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"href="#">Claudia's Github Page</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#destination">Destination</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#food">Food</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
 
 
 
+  <h1 class= "pink mt-5" style="text-align: center;">Hello I am Claudia</h1>
   <div class="intr">
     Welcome to my page :>
   </div>
@@ -32,8 +53,8 @@
 
   <br>
   
-  <h2 class="purple"> My favourite travel destination</h2>
-  <div class="video-container">
+  <h2 class="purple" id="destination"> My favourite travel destination</h2>
+  <div class="video-container mt-3">
     <iframe 
     src="https://www.youtube.com/embed/CcCjvSZQ-Xc?autoplay=1&mute=1&controls=0" 
     title="YouTube video player" 
@@ -43,6 +64,42 @@
     allowfullscreen>
     </iframe>
   </div>
+
+
+  <h2 class="red mt-5" id="food"> My favourite food</h2>
+  <div class="foodcaption">Here is a gallery of some of my favourite food!</div>
+
+  <div class="row my-2">
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/korean-barbecue.jpg" class="d-block w-50" alt="kbbq">
+        </div>
+        <div class="carousel-item">
+          <img src="images/sushi.jpg" class="d-block w-50" alt="sushi">
+        </div>
+        <div class="carousel-item">
+          <img src="images/steak.jpg" class="d-block w-50" alt="steak">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
+
+
   
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
