--- a/index.html
+++ b/index.html
@@ -54,15 +54,17 @@
   <br>
   
   <h2 class="purple" id="destination"> My favourite travel destination</h2>
-  <div class="video-container mt-3">
-    <iframe 
-    src="https://www.youtube.com/embed/CcCjvSZQ-Xc?autoplay=1&mute=1&controls=0" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-    referrerpolicy="strict-origin-when-cross-origin" 
-    allowfullscreen>
-    </iframe>
+  <div class="row justify-content-center">
+    <div class="video-container w-75 mt-2" >
+      <iframe 
+      src="https://www.youtube.com/embed/CcCjvSZQ-Xc?autoplay=1&mute=1&controls=0" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      referrerpolicy="strict-origin-when-cross-origin" 
+      allowfullscreen>
+      </iframe>
+    </div>
   </div>
 
 
