--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="foodcaption">Here is a gallery of some of my favourite food!</div>
 
   <div class="row my-2">
-    <div id="carouselExample" class="carousel slide">
+    <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -83,17 +83,17 @@
           <img src="images/korean-barbecue.jpg" class="d-block w-50" alt="kbbq">
         </div>
         <div class="carousel-item">
-          <img src="images/sushi.jpg" class="d-block w-50" alt="sushi">
-        </div>
-        <div class="carousel-item">
           <img src="images/steak.jpg" class="d-block w-50" alt="steak">
         </div>
+        <div class="carousel-item">
+          <img src="images/sushi.jpg" class="d-block w-50" alt="sushi">
+        </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
