--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <br>
 
-  <img src="/images/mypic.jpg">
+  <img style="width: 400px; height: auto" src="/images/mypic.jpg">
   <br>
 
   <div>
