--- a/index.html
+++ b/index.html
@@ -72,28 +72,31 @@
   <div class="foodcaption">Here is a gallery of some of my favourite food!</div>
 
   <div class="row my-2">
-    <div id="carouselExampleIndicators" class="carousel slide">
+
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
+
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/korean-barbecue.jpg" class="d-block w-50" alt="kbbq">
+          <img src="images/korean-barbecue.jpg" class="d-block w-50" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="images/steak.jpg" class="d-block w-50" alt="steak">
+          <img src="images/steak.jpg" class="d-block w-50" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="images/sushi.jpg" class="d-block w-50" alt="sushi">
+          <img src="images/sushi.jpg" class="d-block w-50" alt="...">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
