--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <br>
   
-  <h2 class="purple" id="destination"> My favourite travel destination</h2>
+  <h2 class="destination" id="destination"> My favourite travel destination</h2>
   <div class="row justify-content-center">
     <div class="video-container w-75 mt-2" >
       <iframe 
@@ -68,7 +68,7 @@
   </div>
 
 
-  <h2 class="red mt-5" id="food"> My favourite food</h2>
+  <h2 class="food" id="food"> My favourite food</h2>
   <div class="foodcaption">Here is a gallery of some of my favourite food!</div>
 
   <div class="row my-2">
